[tool.poetry]
name = "rgear"
version = "0.1.0"
description = "Generate R helper scripts for use on Domino Data Lab"
authors = ["Mark Sellors <github@5vcc.com>"]
readme = "README.md"
repository = "https://github.com/sellorm/rgear"
homepage = "https://blog.sellorm.com/projects"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rgear = "rgear:main"

